argocd/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    # kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
  name: argocd-ingress
  namespace: argocd
spec:
  #ingressClassName: nginx
  rules:
    - host: argocd.keshikslab.com
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - argocd.keshikslab.com
      secretName: argocd-server-tls
