argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
   ingress.kubernetes.io/ssl-redirect: "false"
   nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host:  argocd.${MY_DOMAIN}
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                name: http
